# MCP-Email-Analyzer

./: .env.example  .gitignore  README.md  create_scaffold.sh
mcp-email-analyzer/: README.md  Readme.md  pyproject.toml  requirements-gmail.txt
mcp-email-analyzer/docs/: MCP_server.md
mcp-email-analyzer/scripts/: setup_mcp_server.py  test_mcp_server.py
mcp-email-analyzer/src/: __init__.py
mcp-email-analyzer/src/core/: __init__.py  interfaces.py  models.py
mcp-email-analyzer/src/gmail/: __init__.py  auth.py  client.py  example.py  exceptions.py  factory.py  mapper.py
mcp-email-analyzer/src/server/: __init__.py  __main__.py  config.py  exceptions.py  main.py  mcp_server.py
mcp-email-analyzer/src/utils/: __init__.py  logger.py
mcp-email-analyzer/tools/: email_analyzer_mcp.json
