[tool.poetry]
name = "mcp-email-analyzer"
version = "0.1.0"
description = "MCP Server for Gmail email analysis"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
mcp = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
structlog = "^23.0.0"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.0.0"
aiohttp = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-email-analyzer = "src.server.main:main"